typo3/sysext/core/Tests/Functional/TypoScript/IncludeTree/Fixtures/IncludeTyposcript/InvalidImport/Scenario4/setup.typoscript
<INCLUDE_TYPOSCRIPT: source="FILE:./../invalidPathTraversalTarget.typoscript">
